--- a/packages/nerdlet/package.json
+++ b/packages/nerdlet/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.4",
     "react-syntax-highlighter": "^12.2.1"
   },
   "nr1": {
